--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,17 @@
     <string name="error_field_empty">Field can not be empty</string>
     <string name="error_field_max">Exceeded the maximum field length</string>
     <string name="error_field_format">Wrong format</string>
+
+    <string name="register_navigation_next">Next</string>
+    <string name="register_navigation_create_account">Create account</string>
+    <string name="registration_name">Name</string>
+    <string name="registration_surname">Surname</string>
+    <string name="registration_login">Login</string>
+    <string name="registration_password">Password</string>
+    <string name="registration_confirm_password">Confirm password</string>
+    <string name="registration_email">Email</string>
+    <string name="registration_phone">Phone</string>
+    <string name="registration_skype">Skype</string>
+    <string name="registration_city">City</string>
+
 </resources>
