WallFragment add RecyclerView scroll listener and load more date Add LoadPagination, PaginationOnScrollListener for simple implement pagination for each ViewPagination (Activity with pagination or Fragment with pagination)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="registration_skype">Skype</string>
     <string name="registration_city">City</string>
 
+    <string name="progress_wait">Please wait, loading more</string>
+
 </resources>
