--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -19,4 +19,6 @@
     <string name="registration_skype">Skype</string>
     <string name="registration_city">Город</string>
 
+    <string name="progress_wait">Пожалуйста подождите, идет загрузка</string>
+
 </resources>
