--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -20,5 +20,6 @@
     <string name="registration_city">Город</string>
 
     <string name="progress_wait">Пожалуйста подождите, идет загрузка</string>
+    <string name="activity_label_wall">Стена</string>
 
 </resources>
