--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="registration_city">City</string>
 
     <string name="progress_wait">Please wait, loading more</string>
+    <string name="activity_label_wall">Wall</string>
 
 </resources>
