Delete LoginService Update Navigation Drawer

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -25,7 +25,15 @@
     <string name="activity_label_registration">Регистрация</string>
     <string name="activity_label_friends">Друзья</string>
 
-    <string name="nav_wall">Стена</string>
-    <string name="nav_friends">Друзья</string>
+    <string name="nav_item_profile">Профиль</string>
+    <string name="nav_item_wall">Стена</string>
+    <string name="nav_item_friends">Друзья</string>
+    <string name="nav_item_message">Сообщения</string>
+    <string name="nav_item_groups">Группы</string>
+    <string name="nav_item_search">Поиск</string>
+    <string name="nav_item_settings">Настройки</string>
+    <string name="nav_menu_authorization">Авторизация</string>
+    <string name="nav_item_sing_in">Вход</string>
+    <string name="nav_item_logout">Выйти</string>
 
 </resources>
