--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,15 @@
     <string name="activity_label_registration">Registration</string>
     <string name="activity_label_friends">Friends</string>
 
-    <string name="nav_wall">Wall</string>
-    <string name="nav_friends">Friends</string>
+    <string name="nav_item_profile">Profile</string>
+    <string name="nav_item_wall">Wall</string>
+    <string name="nav_item_friends">Friends</string>
+    <string name="nav_item_message">Message</string>
+    <string name="nav_item_groups">Groups</string>
+    <string name="nav_item_search">Search</string>
+    <string name="nav_item_settings">Settings</string>
+    <string name="nav_menu_authorization">Authorization</string>
+    <string name="nav_item_sing_in">Sing in</string>
+    <string name="nav_item_logout">Logout</string>
 
 </resources>
