--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -35,5 +35,6 @@
     <string name="nav_menu_authorization">Авторизация</string>
     <string name="nav_item_sing_in">Вход</string>
     <string name="nav_item_logout">Выйти</string>
+    <string name="error_autorization">Bad username or password</string>
 
 </resources>
