--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,6 @@
     <string name="nav_menu_authorization">Authorization</string>
     <string name="nav_item_sing_in">Sing in</string>
     <string name="nav_item_logout">Logout</string>
+    <string name="error_autorization">Bad username or password</string>
 
 </resources>
