--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -31,8 +31,9 @@
     <string name="nav_item_message">Сообщения</string>
     <string name="nav_item_groups">Группы</string>
     <string name="nav_item_settings">Настройки</string>
-    <string name="nav_menu_authorization">Авторизация</string>
     <string name="nav_item_logout">Выйти</string>
     <string name="error_autorization">Bad username or password</string>
+
+    <string name="post_item_remove">Удалить</string>
 
 </resources>
