--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,8 +39,8 @@
     <string name="nav_item_message">Message</string>
     <string name="nav_item_groups">Groups</string>
     <string name="nav_item_settings">Settings</string>
-    <string name="nav_menu_authorization">Authorization</string>
     <string name="nav_item_logout">Logout</string>
     <string name="error_autorization">Bad username or password</string>
+    <string name="post_item_remove">Remove</string>
 
 </resources>
