--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,9 @@
     <string name="nav_item_logout">Logout</string>
     <string name="error_autorization">Bad username or password</string>
     <string name="post_item_remove">Remove</string>
+    <string name="error_click_retry">An error has occurred! click here to retry</string>
+    <string name="login_button_success">Success</string>
+    <string name="login_button_error">Error</string>
+    <string name="login_button_progress">Loading</string>
 
 </resources>
