Add NewPostActivity with Fragment Refactor post layouts change ImageButton to ImageView

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -24,6 +24,8 @@
     <string name="activity_label_wall">Стена</string>
     <string name="activity_label_registration">Регистрация</string>
     <string name="activity_label_friends">Друзья</string>
+    <string name="activity_label_new_post">Новый пост</string>
+
 
     <string name="nav_item_profile">Профиль</string>
     <string name="nav_item_wall">Стена</string>
