--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -25,6 +25,7 @@
     <string name="activity_label_registration">Регистрация</string>
     <string name="activity_label_friends">Друзья</string>
     <string name="activity_label_new_post">Новый пост</string>
+    <string name="activity_label_profile">Профиль</string>
 
 
     <string name="nav_item_profile">Профиль</string>
