--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="activity_label_friends">Friends</string>
     <string name="activity_label_new_post">New Post</string>
     <string name="activity_label_profile">Profile</string>
+    <string name="activity_label_settings">Settings</string>
 
     <string name="nav_item_profile">Profile</string>
     <string name="nav_item_wall">Wall</string>
@@ -51,5 +52,9 @@
     <string name="login_button_progress">Loading</string>
     <string name="post_upload_item">Upload post</string>
     <string name="post_clear_image_item">Удалить изображение</string>
+    <string name="preference_version_name">version name</string>
+    <string name="preference_build_number">build number</string>
+    <string name="preference_version_name_title">Build version</string>
+    <string name="preference_build_number_title">Build number</string>
 
 </resources>
