--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -44,8 +44,19 @@
     <string name="login_button_error">Error</string>
     <string name="login_button_progress">Loading</string>
     <string name="post_upload_item">Отправить пост</string>
-    <string name="post_clear_iamge_item">Clear photo</string>
     <string name="preference_version_name_title">Версия приложения</string>
     <string name="preference_build_number_title">Номер сборки</string>
+    <string name="preference_version_name">version name</string>
+    <string name="preference_build_number">build number</string>
+
+    <string name="tab_title_contact">Контакт</string>
+    <string name="tab_title_info">Инфо</string>
+    <string name="tab_title_login">Логин</string>
+    <string name="tab_error_message">Ошибка</string>
+    <string name="error_field_empty">Поле не может быть пустым</string>
+    <string name="error_field_max">Превышена максимальная длина</string>
+    <string name="error_field_format">Неправильный формат</string>
+    <string name="error_click_retry">Ошибка! нажмите чтобы повторить</string>
+    <string name="post_clear_image_item">Удалить изображение</string>
 
 </resources>
