--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,5 +56,6 @@
     <string name="preference_build_number">build number</string>
     <string name="preference_version_name_title">Build version</string>
     <string name="preference_build_number_title">Build number</string>
+    <string name="friend_search_item">Search persons</string>
 
 </resources>
