Add Group with MVP

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="activity_label_new_post">New Post</string>
     <string name="activity_label_profile">Profile</string>
     <string name="activity_label_settings">Settings</string>
+    <string name="activity_label_groups">Groups</string>
 
     <string name="nav_item_profile">Profile</string>
     <string name="nav_item_wall">Wall</string>
