--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,10 +55,19 @@
     <string name="login_button_progress">Loading</string>
     <string name="post_upload_item">Upload post</string>
     <string name="post_clear_image_item">Clear picture</string>
+
+    <string name="preference_app_info">app info</string>
+    <string name="preference_build_date">build date</string>
+    <string name="preference_build_date_title">Build date</string>
+    <string name="preference_app_info_title">App info</string>
+    <string name="preference_settings_notification">settings notification</string>
+    <string name="preference_settings_notification_title">Settings notification</string>
     <string name="preference_version_name">version name</string>
     <string name="preference_build_number">build number</string>
     <string name="preference_version_name_title">Build version</string>
     <string name="preference_build_number_title">Build number</string>
     <string name="friend_search_item">Search persons</string>
+    <string name="activity_label_notification_settings">Notification settings</string>
+    <string name="activity_label_app_info">App info</string>
 
 </resources>
