--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,5 +69,11 @@
     <string name="friend_search_item">Search persons</string>
     <string name="activity_label_notification_settings">Notification settings</string>
     <string name="activity_label_app_info">App info</string>
+    <string name="preference_vibration">vibration</string>
+    <string name="preference_vibration_title">Vibration</string>
+    <string name="preference_sound">sound</string>
+    <string name="preference_sound_title">Sound</string>
+    <string name="preference_notification_title">Notification</string>
+    <string name="preference_notification">notification</string>
 
 </resources>
