--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,5 +75,6 @@
     <string name="preference_sound_title">Sound</string>
     <string name="preference_notification_title">Notification</string>
     <string name="preference_notification">notification</string>
+    <string name="activity_label_group">Group</string>
 
 </resources>
