Add Friend wall

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -77,5 +77,6 @@
     <string name="preference_notification_title">Уведомления</string>
     <string name="preference_notification">notification</string>
     <string name="activity_label_group">Группа</string>
+    <string name="activity_label_friend">Друг</string>
 
 </resources>
