--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,5 +76,6 @@
     <string name="preference_notification_title">Notification</string>
     <string name="preference_notification">notification</string>
     <string name="activity_label_group">Group</string>
+    <string name="activity_label_friend">Friend</string>
 
 </resources>
