--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -78,5 +78,6 @@
     <string name="preference_notification">notification</string>
     <string name="activity_label_group">Группа</string>
     <string name="activity_label_friend">Друг</string>
+    <string name="activity_label_messages">Сообщения</string>
 
 </resources>
