--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,5 +78,6 @@
     <string name="activity_label_group">Group</string>
     <string name="activity_label_friend">Friend</string>
     <string name="activity_label_messages">Messages</string>
+    <string name="activity_label_chat">Chat</string>
 
 </resources>
