--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -5,7 +5,7 @@
     <string name="authorization_password">Пароль</string>
     <string name="authorization_log_in">Войти</string>
     <string name="authorization_sing_up">Регистрация</string>
-    <string name="authorization_forgot_password">Востановить пароль</string>
+    <string name="authorization_forgot_password">Восстановить пароль</string>
 
     <string name="register_navigation_next">Далее</string>
     <string name="register_navigation_create_account">Зарегистрироватсья</string>
