Add Custom Empty RecyclerView Update Wall, Friends, Groups, Dialogs to EmptyRecyclerView

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -80,5 +80,6 @@
     <string name="activity_label_friend">Друг</string>
     <string name="activity_label_messages">Сообщения</string>
     <string name="activity_label_chat">Чат</string>
+    <string name="empty_recycler_view">Нет данных. Пожалуйста, добавьте контент</string>
 
 </resources>
