Start update group view add show group information

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,5 +80,7 @@
     <string name="activity_label_messages">Messages</string>
     <string name="activity_label_chat">Chat</string>
     <string name="empty_recycler_view">Have not data. Please, add content</string>
+    <string name="group_members">Members</string>
+    <string name="Description">Description</string>
 
 </resources>
