--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -81,5 +81,7 @@
     <string name="activity_label_messages">Сообщения</string>
     <string name="activity_label_chat">Чат</string>
     <string name="empty_recycler_view">Нет данных. Пожалуйста, добавьте контент</string>
+    <string name="group_members">Участники</string>
+    <string name="Description">Описание</string>
 
 </resources>
