Update remove user from friends

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -85,5 +85,6 @@
     <string name="Description">Описание</string>
     <string name="fab_title_post">Создать пост</string>
     <string name="fab_title_message">Написать сообщение</string>
+    <string name="remove_friend_item">Удалить из друзей</string>
 
 </resources>
