--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,5 +84,6 @@
     <string name="Description">Description</string>
     <string name="fab_title_post">Create post</string>
     <string name="fab_title_message">Write message</string>
+    <string name="remove_friend_item">Remove friend</string>
 
 </resources>
