Update remove group from favorite

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -86,5 +86,6 @@
     <string name="fab_title_post">Создать пост</string>
     <string name="fab_title_message">Написать сообщение</string>
     <string name="remove_friend_item">Удалить из друзей</string>
+    <string name="remove_group_item">Удалить группу</string>
 
 </resources>
