--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,5 +86,6 @@
     <string name="fab_title_message">Write message</string>
     <string name="remove_friend_item">Remove friend</string>
     <string name="remove_group_item">Remove group</string>
+    <string name="chat_input_message">Input message</string>
 
 </resources>
