--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,5 +87,10 @@
     <string name="remove_friend_item">Remove friend</string>
     <string name="remove_group_item">Remove group</string>
     <string name="chat_input_message">Input message</string>
+    <string name="restore_password">Restore</string>
+    <string name="restore_password_completed">Password restored, check mail</string>
+    <string name="activity_label_restore">Restore password</string>
+    <string name="login_welcome_part_one">Welcome</string>
+    <string name="login_welcome_part_two">registration success</string>
 
 </resources>
