--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
     <string name="registration_phone">Phone</string>
     <string name="registration_skype">Skype</string>
     <string name="registration_city">City</string>
+    <string name="registration_sex_male">Male</string>
+    <string name="registration_sex_female">Female</string>
 
     <string name="progress_wait">Please wait, loading more</string>
     <string name="progress_dialog_message">Publication post</string>
