--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,5 +94,8 @@
     <string name="activity_label_restore">Restore password</string>
     <string name="login_welcome_part_one">Welcome</string>
     <string name="login_welcome_part_two">registration success</string>
+    <string name="profile_city">City</string>
+    <string name="profile_about">About</string>
+    <string name="profile_skype">Skype</string>
 
 </resources>
